--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jackal</title>
-    <!-- Phaser.js Library -->
-    <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.min.js"></script>
-    <!-- Link to your game code -->
-    <script src="game.js"></script>
+    <title>Jackal: Rise of Raven and Titan</title>
+    <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Loading Jackal...</h1>
+    <div id="game-container"></div>
+    <script src="game.js"></script>
 </body>
-</html>
+</html> 
