--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jackal: Rise of Raven and Titan</title>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="path/to/styles.css">
 </head>
 <body>
     <div id="game-container"></div>
