--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <div id="game-container"></div>
-    <script src="game.js"></script>
+    <script src="path/to/game.js"></script>
 </body>
 </html>
