--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Jackal: Rise of Raven and Titan</title>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.js"></script>
     <link rel="stylesheet" href="path/to/styles.css">
+    <link rel="icon" href="path/to/favicon.ico">
 </head>
 <body>
     <div id="game-container"></div>
