--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Jackal: Rise of Raven and Titan</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.55.2/phaser.min.js"></script>
   <link rel="stylesheet" href="styles.css"> <!-- Optional if you have a styles.css -->
+  <canvas id="gameCanvas" width="800" height="600"></canvas>
 </head>
 <body>
   <div id="game-container"></div>
