--- a/index.html
+++ b/index.html
@@ -1,33 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jackal: Rise of Raven and Titan</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.55.2/phaser.min.js"></script>
-  <link rel="stylesheet" href="styles.css"> <!-- Optional if you have a styles.css -->
-  <canvas id="gameCanvas" width="800" height="600"></canvas>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jackal: Rise of Raven and Titan</title>
+    <script src="game.js" defer></script> <!-- Ensure this is included only once -->
 </head>
 <body>
-  <div id="game-container"></div>
-  <script>
-    // Ensure the path matches the structure in your repository
-    const ASSETS = {
-      background: "assets/background.png",
-      titleScreen: "assets/title_screen.png",
-      jackal: "assets/jackal.png",
-      raven: "assets/raven.png",
-      titan: "assets/titan.png",
-      drone: "assets/drone.png",
-      enemy: "assets/enemy.png",
-      barrel: "assets/barrel.png",
-      crosshair: "assets/crosshair.png",
-      bullets: "assets/bullets.png",
-      bossMusic: "assets/boss_music.mp3",
-      victoryMusic: "assets/victory_music.mp3",
-      normalMusic: "assets/normal_music.mp3"
-    };
-  </script>
-  <script src="game.js"></script> <!-- Link to your game.js -->
+    <canvas id="gameCanvas" width="800" height="600"></canvas>
 </body>
 </html>
