--- a/index.html
+++ b/index.html
@@ -11,3 +11,4 @@
 </body>
 </html>
  <script src="game.js" defer></script> <!-- Ensure this is included only once -->
+"$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)" 
