--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jackal: Rise of Raven and Titan</title>
-     <script src="game.js" defer></script> <!-- Ensure this is included only once -->
+    <script src="scripts/game.js" defer></script>
+    
 </head>
 <body>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
